Removed auto-scrolling from the schedule in place of scrollbars. Fixed the load time of the schedule page to be near instant.

--- a/public/index.css
+++ b/public/index.css
@@ -409,9 +409,9 @@ html {
   -ms-overflow-style: none;
 }
 
-.schedule-day::-webkit-scrollbar {
+/*.schedule-day::-webkit-scrollbar {
   display: none;
-}
+}*/
 
 .schedule-day p {
   background: black;
